add project remont-stroy

--- a/remont-stroy/about-us.html
+++ b/remont-stroy/about-us.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250312090246" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250312090246" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250312090246" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314090454" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314090454" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250314090454" />
 	<title>О компании</title>
 </head>
 
@@ -191,8 +191,34 @@
 				<!-- Рабочий процесс -->
 				<section class="step">
   <div class="step__container">
-    <div class="step__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>Рабочий процесс</span></div>
+    <div class="step__wrapper">
+      <div class="step__body">
+        <div class="step__theme"><img class="lazy" data-src="img/icon-logo.svg" alt="Маленькая иконка логотипа" /><span>Рабочий процесс</span></div>
+        <p class="step__text">Качественный ремонт квартир включает полный комплекс операций по благоустройству, дизайну и отделке помещений:</p>
+        <ul class="step__list">
+          <li>проектирование, перепланировка и дизайн интерьеров;</li>
+          <li>подбор материалов, сантехники и бытового оборудования;</li>
+          <li>проектирование, реконструкция и замена инженерных коммуникаций;</li>
+          <li>демонтаж перегородок / стен и других элементов строительных конструкций;</li>
+          <li>прокладка электропроводки;</li>
+          <li>обустройство потолочных систем разных видов;</li>
+          <li>укладка напольных покрытий;</li>
+          <li>монтаж\демонтаж оконных и дверных конструкций;</li>
+          <li>декоративная отделка с использованием различных материалов;</li>
+          <li>подбор мебели и декора для обустройства и отделки комнат;</li>
+          <li>подключение сантехники и бытовых приборов;</li>
+          <li>послеремонтная уборка и вывоз строительного мусора.</li>
+        </ul>
+      </div>
+      <div class="step__image">
+        <picture><source srcset="img/img-photo.webp" type="image/webp"><img src="img/img-photo.png" alt="" /></picture>
+      </div>
+    </div>
     <h2 class="step__title">Как мы работаем</h2>
+    <p class="step__descr">
+      Заказ на ремонт однокомнатной, двухкомнатной, трехкомнатной квартиры у нас, вы получите современное, комфортное, стильное и продуманное жилье, которое будет доставлять настоящее удовольствие в
+      течение длительного времени эксплуатации.
+    </p>
     <div class="step__items">
       <div class="step__item">
         <div class="step__head">
@@ -355,6 +381,14 @@
         <p class="our-advan__descr">Полный штат мастеров по всем видам работ с опытом более 10 лет</p>
       </div>
     </div>
+    <h3 class="our-advan__name">Стоимость ремонта квартир</h3>
+    <p class="our-advan__text">
+      Сколько стоит ремонт квартиры? Это один первых вопросов, которые задает каждый, кто решил сделать реконструкцию своего жилища. Актуальные цены на различные виды отделочно-строительных работ
+      можно найти в прайсе, который представляет на соответствующей странице сайт ремонта от компании «Ремонт Строй». Данная информация служит исключительно для ознакомления, так как точная смета
+      рассчитывается отдельно для каждого объекта с учетом всех его особенностей. Для этого необходимо оформить заявку на бесплатный выезд прораба и замерщика на объект. Сделать это можно, связавшись
+      с нашими специалистами по контактным номерам телефонов или, оставив заявку на обратный звонок в специальной форме на этой страничке сайта. Наши представители выполнять все необходимые замеры для
+      расчета сметы, а также подскажут оптимальные решения для вашего жилья.
+    </p>
   </div>
 </div>
 
@@ -703,8 +737,8 @@
 
 
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250312090246"></script>
-		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250312090246"></script>
-		<script src="js/app.min.js?_v=20250312090246"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314090454"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314090454"></script>
+		<script src="js/app.min.js?_v=20250314090454"></script>
 	</body>
 </html>
