--- a/remont-stroy/price-list.html
+++ b/remont-stroy/price-list.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250312090246" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250312090246" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250312090246" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314090454" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314090454" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250314090454" />
 	<title>Цены на ремонт квартир</title>
 </head>
 
@@ -644,6 +644,14 @@
         <p class="our-advan__descr">Полный штат мастеров по всем видам работ с опытом более 10 лет</p>
       </div>
     </div>
+    <h3 class="our-advan__name">Стоимость ремонта квартир</h3>
+    <p class="our-advan__text">
+      Сколько стоит ремонт квартиры? Это один первых вопросов, которые задает каждый, кто решил сделать реконструкцию своего жилища. Актуальные цены на различные виды отделочно-строительных работ
+      можно найти в прайсе, который представляет на соответствующей странице сайт ремонта от компании «Ремонт Строй». Данная информация служит исключительно для ознакомления, так как точная смета
+      рассчитывается отдельно для каждого объекта с учетом всех его особенностей. Для этого необходимо оформить заявку на бесплатный выезд прораба и замерщика на объект. Сделать это можно, связавшись
+      с нашими специалистами по контактным номерам телефонов или, оставив заявку на обратный звонок в специальной форме на этой страничке сайта. Наши представители выполнять все необходимые замеры для
+      расчета сметы, а также подскажут оптимальные решения для вашего жилья.
+    </p>
   </div>
 </div>
 
@@ -1038,8 +1046,8 @@
 
 
     </div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250312090246"></script>
-		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250312090246"></script>
-    <script src="js/app.min.js?_v=20250312090246"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314090454"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314090454"></script>
+    <script src="js/app.min.js?_v=20250314090454"></script>
   </body>
 </html>
