--- a/remont-stroy/index.html
+++ b/remont-stroy/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314090454" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314090454" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250314090454" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314202502" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314202502" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250314202502" />
 	<title>Главная</title>
 </head>
 
@@ -232,9 +232,8 @@
             <h2 class="types-repairs__title">Виды ремонта, которые мы выполняем</h2>
             <p class="types-repairs__descr">
               В зависимости от первоначального состояния жилья и целей, которые преследует заказчик, принимая решение по его реконструкции, различают несколько основных видов услуг: Черновой,
-              косметический, капитальный, дизайнерский ремонт квартир. Кроме того, многие клиенты часто интересуются евроремонтом (ссылка на страницу евроремонта) жилых объектов. Это достаточно
-              условное понятие, которое может быть отнесено к любому виду реконструкций. Как правило, такой термин подразумевает использование современных строительных и отделочных материалов
-              европейского качества.
+              косметический, капитальный, дизайнерский ремонт квартир. Кроме того, многие клиенты часто интересуются <a href="">евроремонтом</a> жилых объектов. Это достаточно условное понятие,
+              которое может быть отнесено к любому виду реконструкций. Как правило, такой термин подразумевает использование современных строительных и отделочных материалов европейского качества.
             </p>
             <div class="types-repairs__tabs">
               <div class="types-repairs__tab _active" data-tab="1">Черновой</div>
@@ -849,7 +848,7 @@
             <img class="lazy" data-src="img/icon-arrow.svg" alt="" />
           </button>
           <label class="feedback__agree">
-            <div>Нажимая на кнопку, вы даёте на <a href="#" class="feedback__link">обработку персональных данных</a></div>
+            <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="feedback__link">обработку персональных данных</a></div>
           </label>
           <div class="error-message" id="agreementError-base"></div>
         </form>
@@ -940,7 +939,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-call"></div>
     </form>
@@ -972,7 +971,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-call-up"></div>
     </form>
@@ -1001,7 +1000,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-work"></div>
     </form>
@@ -1203,8 +1202,8 @@
 
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314090454"></script>
-    <script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314090454"></script>
-    <script src="js/app.min.js?_v=20250314090454"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314202502"></script>
+    <script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314202502"></script>
+    <script src="js/app.min.js?_v=20250314202502"></script>
   </body>
 </html>
