--- a/remont-stroy/payment.html
+++ b/remont-stroy/payment.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314090454" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314090454" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250314090454" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314202502" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314202502" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250314202502" />
 	<title>Способы оплаты</title>
 </head>
 
@@ -211,7 +211,7 @@
             <img class="lazy" data-src="img/icon-arrow.svg" alt="" />
           </button>
           <label class="feedback__agree">
-            <div>Нажимая на кнопку, вы даёте на <a href="#" class="feedback__link">обработку персональных данных</a></div>
+            <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="feedback__link">обработку персональных данных</a></div>
           </label>
           <div class="error-message" id="agreementError-base"></div>
         </form>
@@ -348,7 +348,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-call"></div>
     </form>
@@ -380,7 +380,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-call-up"></div>
     </form>
@@ -409,7 +409,7 @@
       </div>
       <button class="modal__send" type="submit">Отправить</button>
       <label class="modal__agree">
-        <div>Нажимая на кнопку, вы даёте на <a href="#" class="modal__link">обработку персональных данных</a></div>
+        <div>Нажимая на кнопку, вы даёте согласие на <a href="#" class="modal__link">обработку персональных данных</a></div>
       </label>
       <div class="error-message" id="agreementError-work"></div>
     </form>
@@ -611,8 +611,8 @@
 
 
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314090454"></script>
-		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314090454"></script>
-		<script src="js/app.min.js?_v=20250314090454"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314202502"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314202502"></script>
+		<script src="js/app.min.js?_v=20250314202502"></script>
 	</body>
 </html>
