--- a/remont-stroy/vacancy.html
+++ b/remont-stroy/vacancy.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<link rel="icon" type="image/png" href="./img/favicon-96x96.png" sizes="96x96" />
-	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250314202502" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250314202502" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250314202502" />
+	<link rel="stylesheet" href="https://unpkg.com/beerslider/dist/BeerSlider.css?_v=20250320051227" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css?_v=20250320051227" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250320051227" />
 	<title>Вакансии</title>
 </head>
 
@@ -592,42 +592,42 @@
 <!-- Страницы -->
 <div class="btn-pages">НАВИГАЦИЯ</div>
 <div class="pages">
-  <div class="pages__body">
-    <div data-close class="pages__close">
-      <img class="lazy" data-src="img/icon-close.svg" alt="" />
-    </div>
-    <div class="pages__info">
-      <div class="pages__title">Страницы</div>
-      <ul class="pages__items">
-        <a class="_done" href="index.html">Главная</a>
-        <a class="_done" href="about-us.html">О компании</a>
-        <a class="_done" href="vacancy.html">Вакансии</a>
-        <a class="_done" href="contacts.html">Контакты</a>
-        <a class="_done" href="call-up.html">Вызвать замерщика</a>
-        <a class="_done" href="payment.html">Способы оплаты</a>
-        <a class="_done" href="service.html">Услуги: Черновой ремнот/Косметический...</a>
-        <a class="_done" href="price-list.html">Цены на ремонт квартир и другие</a>
-        <a class="_done" href="build.html">Строительство домов</a>
-        <a class="_done" href="build-house.html">Дома из бревна/кирпича...</a>
-        <a class="_done" href="politics.html">Политика конфиденциальности</a>
-        <a class="_done" href="404.html">Страница не найдена</a>
-        <a class="_done" href="calculator.html">Калькулятор</a>
-      </ul>
-      <div class="pages__title">Модальные окна</div>
-      <div class="pages__btns">
-        <a class="_done" id="up-btn" href="#">Оставить заявку</a>
-        <a class="_done" id="call-btn" href="#">Заказать звонок</a>
-        <a class="_done" id="work-btn" href="#">Вызвать замерщика</a>
-        <a class="_done" href="#">Прочие услуги: Работает в шапке</a>
-      </div>
-    </div>
-  </div>
+	<div class="pages__body">
+		<div data-close class="pages__close">
+			<img class="lazy" data-src="img/icon-close.svg" alt="" />
+		</div>
+		<div class="pages__info">
+			<div class="pages__title">Страницы</div>
+			<ul class="pages__items">
+				<a class="_done" href="index.html">Главная</a>
+				<a class="_done" href="about-us.html">О компании</a>
+				<a class="_done" href="vacancy.html">Вакансии</a>
+				<a class="_done" href="contacts.html">Контакты</a>
+				<a class="_done" href="call-up.html">Вызвать замерщика</a>
+				<a class="_done" href="payment.html">Способы оплаты</a>
+				<a class="_process" href="service.html">Услуги: Черновой ремнот/Косметический...</a>
+				<a class="_process" href="price-list.html">Цены на отдельные работы</a>
+				<a class="_done" href="build.html">Строительство домов</a>
+				<a class="_process" href="build-house.html">Дома из бревна/кирпича...</a>
+				<a class="_done" href="politics.html">Политика конфиденциальности</a>
+				<a class="_done" href="404.html">Страница не найдена</a>
+				<a class="_done" href="calculator.html">Калькулятор</a>
+			</ul>
+			<div class="pages__title">Модальные окна</div>
+			<div class="pages__btns">
+				<a class="_done" id="up-btn" href="#">Оставить заявку</a>
+				<a class="_done" id="call-btn" href="#">Заказать звонок</a>
+				<a class="_done" id="work-btn" href="#">Вызвать замерщика</a>
+				<a class="_done" href="#">Прочие услуги: Работает в шапке</a>
+			</div>
+		</div>
+	</div>
 </div>
 
 
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250314202502"></script>
-		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250314202502"></script>
-		<script src="js/app.min.js?_v=20250314202502"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js?_v=20250320051227"></script>
+		<script src="https://unpkg.com/beerslider/dist/BeerSlider.js?_v=20250320051227"></script>
+		<script src="js/app.min.js?_v=20250320051227"></script>
 	</body>
 </html>
